fixed styling of age dropdown on mobile

--- a/app/css/additional-styles/quiz.css
+++ b/app/css/additional-styles/quiz.css
@@ -63,13 +63,14 @@
 
   @media (max-width: 768px) {
     .age-dropdown {
-      width: 200px; /* Make the dropdown full width on smaller screens */
-      padding: 8px; /* Slightly reduce padding for smaller screens */
-      border-radius: 15px; /* Adjust for smaller screens */
-      font-size: 0.9rem; /* Slightly smaller font size for readability on mobile */
-      /* Other properties can remain the same */
+      width: 90%; /* Use percentage for responsive width */
+      padding: 10px; /* Optimal padding for touch interfaces */
+      border-radius: 8px; /* A moderate border-radius for a balanced look */
+      font-size: 16px; /* A legible font size for mobile screens */
+      /* Retain other properties as needed */
     }
   }
+  
   
 .progress-bar-wrapper {
   max-width: 500px; /* Adjust as needed for desktop size */
